--- a/i_dream_my_painting_demo.ipynb
+++ b/i_dream_my_painting_demo.ipynb
@@ -91,7 +91,7 @@
       "cell_type": "code",
       "source": [
         "!pip install -q gdown\n",
-        "!pip install -q streamlit\n",
+        "!pip install -q streamlit==1.40.0\n",
         "!pip install -q streamlit-drawable-canvas\n",
         "!pip install -q bitsandbytes\n",
         "!npm install -q localtunnel\n",
