--- a/i_dream_my_painting_demo.ipynb
+++ b/i_dream_my_painting_demo.ipynb
@@ -93,7 +93,11 @@
         "!pip install -q gdown\n",
         "!pip install -q streamlit==1.40.0\n",
         "!pip install -q streamlit-drawable-canvas\n",
-        "!pip install -q bitsandbytes\n",
+        "!pip install -q transformers==4.44.0\n",
+        "!pip install -q accelerate==0.33.0\n",
+        "!pip install -q diffusers==0.29.2\n",
+        "!pip install -U bitsandbytes\n",
+        "!pip install -q peft==0.12.0\n",
         "!npm install -q localtunnel\n",
         "!pip install -q diffusers==0.29.2\n",
         "\n",
