--- a/i_dream_my_painting_demo.ipynb
+++ b/i_dream_my_painting_demo.ipynb
@@ -1,28 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyMgIEN/+c/lQN78QMzL+r0F",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/cilabuniba/i-dream-my-painting/blob/main/i_dream_my_painting_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -30,19 +12,22 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "NTm1z7WuDHbL"
+      },
       "source": [
         "# 🎨 I Dream My Painting: Demo\n",
         "\n",
         "**This Colab Notebook requires a GPU runtime. Change the runtime to use a T4 GPU.**\n",
         "\n",
         "This notebook launches a demo of IDMP where you can use our pipeline to inpaint images interactively using Streamlit."
-      ],
-      "metadata": {
-        "id": "NTm1z7WuDHbL"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "IeGUwUtIEOfk"
+      },
       "source": [
         "## Setup HF Token\n",
         "\n",
@@ -50,49 +35,51 @@
         "\n",
         "1. Make sure to have a [Hugging Face account](https://huggingface.co/join) and be logged in.\n",
         "2. Log in locally by entering your [Hugging Face Hub access token](https://huggingface.co/docs/hub/security-tokens#what-are-user-access-tokens) below, which can be [found here](https://huggingface.co/settings/tokens)"
-      ],
-      "metadata": {
-        "id": "IeGUwUtIEOfk"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "SlhoML_Z34AA"
+      },
+      "outputs": [],
       "source": [
         "from huggingface_hub import login\n",
         "\n",
         "token = ###### FILL ME!!! ######\n",
         "login(token=token)"
-      ],
-      "metadata": {
-        "id": "SlhoML_Z34AA"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Now you can run all the cells below to start the demo... The process will require around ~10/15 minutes to install dependencies and download models."
-      ],
       "metadata": {
         "id": "D0gm-9fPrsyG"
-      }
+      },
+      "source": [
+        "Now you can run all the cells below to start the demo... The process will require around ~10/15 minutes to install dependencies and download models."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Install and Import Libraries"
-      ],
       "metadata": {
         "id": "tqxKpgGHqO_v"
-      }
+      },
+      "source": [
+        "## Install and Import Libraries"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "JLVRMXx_viBG"
+      },
+      "outputs": [],
       "source": [
         "!pip install -q gdown\n",
-        "!pip install -q streamlit==1.40.0\n",
-        "!pip install -q streamlit-drawable-canvas\n",
+        "!pip install -q streamlit==1.40.2\n",
+        "!pip install -q streamlit-drawable-canvas==0.9.3\n",
         "!pip install -q transformers==4.44.0\n",
         "!pip install -q accelerate==0.33.0\n",
         "!pip install -q diffusers==0.29.2\n",
@@ -100,30 +87,46 @@
         "!pip install -q peft==0.12.0\n",
         "!npm install -q localtunnel\n",
         "!pip install -q diffusers==0.29.2\n",
-        "\n",
+        "!pip install --upgrade --force-reinstall numpy transformers\n",
+        "!pip install numpy==1.26.4 --force-reinstall"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Now you will be asked to reload the runtime, accept and run all the cells except the cell above."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "import gdown\n",
         "import os\n",
         "from transformers import LlavaNextProcessor, LlavaNextForConditionalGeneration\n",
         "from diffusers import StableDiffusionInpaintPipeline\n",
         "import torch"
-      ],
-      "metadata": {
-        "id": "JLVRMXx_viBG"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Download the Repository"
-      ],
       "metadata": {
         "id": "yzDAc-_NqU6r"
-      }
+      },
+      "source": [
+        "## Download the Repository"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Y4t7K_DIrtSL"
+      },
+      "outputs": [],
       "source": [
         "# Replace with your actual repository URL\n",
         "repo_url = \"https://github.com/cilabuniba/i-dream-my-painting.git\"\n",
@@ -133,140 +136,140 @@
         "\n",
         "# Optionally, change the current directory to the cloned repository\n",
         "# !cd YOUR_PRIVATE_REPO"
-      ],
-      "metadata": {
-        "id": "Y4t7K_DIrtSL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Download Stable Diffusion 2 Inpainting"
-      ],
       "metadata": {
         "id": "Gsy3NTSbqZLL"
-      }
+      },
+      "source": [
+        "## Download Stable Diffusion 2 Inpainting"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "SJ_e4Wgoe3V6"
+      },
+      "outputs": [],
       "source": [
         "import huggingface_hub\n",
         "\n",
         "huggingface_hub.snapshot_download(\n",
         "    \"stabilityai/stable-diffusion-2-inpainting\",\n",
-        "    local_dir=\"/content/i-dream-my-painting/models/stable-diffusion-2-inpainting\",\n",
+        "    local_dir=\"models/stable-diffusion-2-inpainting\",\n",
         "    ignore_patterns=[\"*.safetensors\", \"*.fp16.bin\", \"*model_index.json\", \"*unet/config.json\"]\n",
         ")"
-      ],
-      "metadata": {
-        "id": "SJ_e4Wgoe3V6"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Get Our Model Checkpoints"
-      ],
       "metadata": {
         "id": "l3G7f3VcqeB8"
-      }
+      },
+      "source": [
+        "## Get Our Model Checkpoints"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "id = \"1_O7XTDjU-EgbjGwVT194NQJemdZXcrMe\"\n",
-        "gdown.download_folder(id=id)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "FaIJ0lhbtOhq"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "id = \"1_O7XTDjU-EgbjGwVT194NQJemdZXcrMe\"\n",
+        "gdown.download_folder(id=id)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!unzip /content/models/multimask.zip\n",
-        "!unzip /content/models/rca.zip"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "tRMONFKKvyEC"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!unzip /content/models/multimask.zip\n",
+        "!unzip /content/models/rca.zip"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Download LLaVA"
-      ],
       "metadata": {
         "id": "x_u1GlVAqrJF"
-      }
+      },
+      "source": [
+        "## Download LLaVA"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "utBFlqGa3TXP"
+      },
+      "outputs": [],
       "source": [
         "processor = LlavaNextProcessor.from_pretrained(\"llava-hf/llava-v1.6-vicuna-7b-hf\")\n",
         "model = LlavaNextForConditionalGeneration.from_pretrained(\"llava-hf/llava-v1.6-vicuna-7b-hf\", torch_dtype=torch.float16, low_cpu_mem_usage=True)\n",
         "del processor\n",
         "del model\n",
         "torch.cuda.empty_cache()"
-      ],
-      "metadata": {
-        "id": "utBFlqGa3TXP"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Setup Paths"
-      ],
       "metadata": {
         "id": "7CJ7Naibquqk"
-      }
+      },
+      "source": [
+        "## Setup Paths"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "os.rename(\"/content/i-dream-my-painting/models/sd_replacements/model_index.json\", \"/content/i-dream-my-painting/models/stable-diffusion-2-inpainting/model_index.json\")\n",
-        "os.rename(\"/content/i-dream-my-painting/models/sd_replacements/config.json\", \"/content/i-dream-my-painting/models/stable-diffusion-2-inpainting/unet/config.json\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "wjz1w4MBkqV_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "os.rename(\"/content/i-dream-my-painting/models/sd_replacements/model_index.json\", \"/content/i-dream-my-painting/models/stable-diffusion-2-inpainting/model_index.json\")\n",
+        "os.rename(\"/content/i-dream-my-painting/models/sd_replacements/config.json\", \"/content/i-dream-my-painting/models/stable-diffusion-2-inpainting/unet/config.json\")"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "os.rename(\"/content/multimask\", \"/content/i-dream-my-painting/models/llava/multimask\")\n",
-        "os.rename(\"/content/rca\", \"/content/i-dream-my-painting/models/sd/rca\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "LXOL1tlhthSl"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "os.rename(\"/content/multimask\", \"/content/i-dream-my-painting/models/llava/multimask\")\n",
+        "os.rename(\"/content/rca\", \"/content/i-dream-my-painting/models/sd/rca\")"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Download Example Images"
-      ],
       "metadata": {
         "id": "f1AFtVZVzWrF"
-      }
+      },
+      "source": [
+        "## Download Example Images"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "K9CN7XK-zZ7b"
+      },
+      "outputs": [],
       "source": [
         "# prompt: download mona lisa, starry night and the birth of venus from wikiart and put them in /content/i-dream-my-painting/mm_inp_dataset/images\n",
         "import os\n",
@@ -295,63 +298,95 @@
         "}\n",
         "\n",
         "\n",
-        "output_dir = \"/content/i-dream-my-painting/data/mm_inp_dataset/images\"\n",
+        "output_dir = \"/content/i-dream-my-painting/data/mm_inp_dataset/images/test\"\n",
         "os.makedirs(output_dir, exist_ok=True)\n",
         "\n",
         "for image_name, image_url in image_urls.items():\n",
         "    image_path = os.path.join(output_dir, f\"{image_name.replace(' ', '_')}.jpg\")\n",
         "    download_image(image_url, image_path)"
-      ],
-      "metadata": {
-        "id": "K9CN7XK-zZ7b"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "KaLqogqtq1VJ"
+      },
       "source": [
         "## Launch the Demo!\n",
         "\n",
         "Here we are! Execute the following two cells to start the demo."
-      ],
-      "metadata": {
-        "id": "KaLqogqtq1VJ"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import urllib\n",
-        "print(\"Password/Enpoint IP for localtunnel is:\",urllib.request.urlopen('https://ipv4.icanhazip.com').read().decode('utf8').strip(\"\\n\"))"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "LWf6iMDXz7YK"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
+      "outputs": [],
       "source": [
-        "Click on the produced URL and insert the above IP address in the page that opens to access the demo. In case of errors try to refresh the page, or try to access the URL using a different browser... Happy inpainting!"
-      ],
-      "metadata": {
-        "id": "tjg9R59_rEhE"
-      }
+        "import urllib\n",
+        "print(\"Password/Enpoint IP for localtunnel is:\",urllib.request.urlopen('https://ipv4.icanhazip.com').read().decode('utf8').strip(\"\\n\"))"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install -U bitsandbytes"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tjg9R59_rEhE"
+      },
+      "source": [
+        "Click on the produced URL and insert the above IP address in the page that opens to access the demo. In case of errors try to refresh the page, or try to access the URL using a different browser... Happy inpainting!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "h5yHrVuMwZSD"
+      },
+      "outputs": [],
       "source": [
         "os.chdir(\"/content/i-dream-my-painting\")\n",
         "!streamlit run inpainting/demo.py --server.fileWatcherType none &>/content/logs.txt &\n",
         "!npx localtunnel --port 8501"
-      ],
-      "metadata": {
-        "id": "h5yHrVuMwZSD"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyMgIEN/+c/lQN78QMzL+r0F",
+      "gpuType": "T4",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "i-dream-my-painting",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.4"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
